Collapse header text design fix in drawerBodyRight
WIP

--- a/src/components/common/Common.module.css
+++ b/src/components/common/Common.module.css
@@ -2086,6 +2086,9 @@
     background: #f2f2f2;
     border-radius: 8px;
     align-items: center;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
     /* border: 1px solid #f2f2f2; */
 }
 
